WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288909
REGRESSION(
291414@main
): [Win, PlayStation] WebSWContextManagerConnection.cpp(188,14): error: unused variable 'serviceWorkerIdentifier'
https://bugs.webkit.org/show_bug.cgi?id=288909
Summary
REGRESSION(291414@main): [Win, PlayStation] WebSWContextManagerConnection.cpp...
Fujii Hironori
Reported
2025-02-28 23:47:16 PST
REGRESSION(
291414@main
): [Win, PlayStation] WebSWContextManagerConnection.cpp(188,14): error: unused variable 'serviceWorkerIdentifier' [309/495] Building CXX object Source\WebKit\CMakeFiles\WebKit.dir\__\__\WebKit\DerivedSources\unified-sources\UnifiedSource-54928a2b-20.cpp.obj FAILED: Source/WebKit/CMakeFiles/WebKit.dir/__/__/WebKit/DerivedSources/unified-sources/UnifiedSource-54928a2b-20.cpp.obj C:\LLVM\bin\clang-cl.exe (...) -- C:\BW\Win-Build-EWS\build\WebKitBuild\Release\WebKit\DerivedSources\unified-sources\UnifiedSource-54928a2b-20.cpp In file included from C:\BW\Win-Build-EWS\build\WebKitBuild\Release\WebKit\DerivedSources\unified-sources\UnifiedSource-54928a2b-20.cpp:6: C:\BW\Win-Build-EWS\build\Source\WebKit\WebProcess/Storage/WebSWContextManagerConnection.cpp(188,14): error: unused variable 'serviceWorkerIdentifier' [-Werror,-Wunused-variable] 188 | auto serviceWorkerIdentifier = contextData.serviceWorkerIdentifier; | ^~~~~~~~~~~~~~~~~~~~~~~ 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2025-02-28 23:50:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41709
EWS
Comment 2
2025-03-01 00:07:46 PST
Committed
291432@main
(6a494406fa01): <
https://commits.webkit.org/291432@main
> Reviewed commits have been landed. Closing PR #41709 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-03-01 00:08:15 PST
<
rdar://problem/145909798
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug