REGRESSION(291414@main): [Win, PlayStation] WebSWContextManagerConnection.cpp(188,14): error: unused variable 'serviceWorkerIdentifier' https://bugs.webkit.org/show_bug.cgi?id=288909

Unreviewed build fix.

* Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::WebSWContextManagerConnection::installServiceWorker):

Canonical link: https://commits.webkit.org/291432@main